# baobab-scryfall-api-caller

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 00_dev_constraints.md  01_specifications.md  V1_compliance.md  cahier_des_charges_baobab_scryfall_api_caller.md  ci_integration_tests.md  dev_diary.md  live_integration_tests.md  publishing_checklist.md  release_notes_0.2.0.md  release_notes_1.0.0.md
docs/tests/coverage/: .coverage  coverage.json  coverage.xml
scripts/: run_live_integration_tests.ps1  run_live_integration_tests.sh  run_quality.ps1  run_quality.sh
src/baobab_scryfall_api_caller/: __init__.py
src/baobab_scryfall_api_caller/cache/: __init__.py  default_cacheable_get.py  get_cache_key.py  json_response_cache.py
src/baobab_scryfall_api_caller/client/: __init__.py  baobab_query_params_normalizer.py  scryfall_api_caller.py  scryfall_http_client.py  web_api_transport_protocol.py
src/baobab_scryfall_api_caller/exceptions/: __init__.py  baobab_scryfall_api_caller_exception.py  scryfall_bulk_data_exception.py  scryfall_not_found_exception.py  scryfall_pagination_exception.py  scryfall_rate_limit_exception.py  scryfall_request_exception.py  scryfall_response_format_exception.py  scryfall_validation_exception.py
src/baobab_scryfall_api_caller/mappers/: __init__.py  autocomplete_mapper.py  bulk_data_mapper.py  card_collection_mapper.py  card_mapper.py  catalog_mapper.py  error_translation_context.py  ruling_mapper.py  scryfall_error_translator.py  scryfall_payload_coercions.py  set_mapper.py
src/baobab_scryfall_api_caller/pagination/: __init__.py  list_response_follow.py  scryfall_list_response_parser.py  scryfall_list_response_validator.py  scryfall_page.py
src/baobab_scryfall_api_caller/validation/: __init__.py  scryfall_request_validators.py
tests/: __init__.py
tests/baobab_scryfall_api_caller/: test_package_bootstrap.py  test_project_structure.py
tests/baobab_scryfall_api_caller/cache/: test_cache_foundation.py
tests/baobab_scryfall_api_caller/client/: test_baobab_query_params_normalizer.py  test_scryfall_api_caller.py  test_scryfall_http_client.py  test_scryfall_http_client_cache.py
tests/baobab_scryfall_api_caller/exceptions/: test_baobab_scryfall_api_caller_exception.py  test_scryfall_bulk_data_exception.py  test_scryfall_not_found_exception.py  test_scryfall_pagination_exception.py  test_scryfall_rate_limit_exception.py  test_scryfall_request_exception.py  test_scryfall_response_format_exception.py  test_scryfall_validation_exception.py
tests/baobab_scryfall_api_caller/mappers/: test_autocomplete_mapper.py  test_bulk_data_mapper.py  test_card_collection_mapper.py  test_card_mapper.py  test_catalog_mapper.py  test_ruling_mapper.py  test_scryfall_error_translator.py  test_scryfall_payload_coercions.py  test_set_mapper.py
tests/baobab_scryfall_api_caller/packaging/: __init__.py
tests/baobab_scryfall_api_caller/pagination/: test_list_response_follow.py  test_scryfall_list_response_parser.py  test_scryfall_list_response_validator.py  test_scryfall_page.py
tests/integration/: __init__.py  conftest.py  live_transport_config.py  scryfall_live_constants.py  test_live_transport_config.py  test_scryfall_live_cards.py  test_scryfall_live_other_domains.py
(+70 files in other folders)
